--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "motion": "^12.10.3",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
